2008-06-24  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gtk/gtktreeview.override (_wrap_gtk_tree_model_tp_getitem): Fix
	logic in negative index branch to avoid refcount corruption.
	(_wrap_gtk_tree_model_tp_setitem): Likewise (bug #537459).

	* tests/test_liststore.py (ListStoreTest.testNegativeIndexGet)
	(ListStoreTest.testNegativeIndexSet): Two new tests for the bug.

2008-06-23  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 539743 – Missing method gtk.IconView.get_tooltip_context

	* gtk/gtk.override: wrap gtk.IconView.get_tooltip_context

	* examples/pygtk-demo/demos/tooltip.py: use the above method.

2008-06-22  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gtk/gtk.override (_wrap_gtk_action_set_menu_item_type)
	(_wrap_gtk_action_set_tool_item_type): Check that argument is a
	subclass of gtk.MenuItem or gtk.ToolItem correspondingly (bug
	#533644).

	* tests/test_actiongroup.py (ActionTest.testSetItemClasses): New
	test for the added type check.

2008-06-22  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 530145 – Missing method gtk.TreeView.get_tooltip_context

	* gtk/gtk.override: wrap gtk.TreeView.get_tooltip_context

	* examples/pygtk-demo/demos/tooltip.py: use the above method.

2008-06-21  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gtk/gtk.override (_wrap_gtk_button_new): Fix 'use_underline'
	being ignored if neither 'text' nor 'stock' is set (bug #524187).

	* tests/Makefile.am:
	* tests/test_button.py: New test file.

2008-06-10  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk.override: wrap gtk.show_about_dialog()
	fixes (bug #167603) patch from Christopher Aillon.

2008-06-09  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* tests/Makefile.am:
	* tests/test_filechooserdialog.py: New test
	
	* gtk/gtk.override: Add a gtk.FileChooserDialog get_action method to
	workaround an issue with the same mothos of gtk.Widget being called.
	fixes (bug #534042).

2008-06-06  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk-base.defs: Deprecate gtk.FileSelection
