@@ -26,7 +26,6 @@
     <methodsynopsis language="python">
         <methodname><link linkend="method-gtkbuilder--add-from-string">add_from_string</link></methodname>
         <methodparam><parameter role="keyword">buffer</parameter></methodparam>
-        <methodparam><parameter role="keyword">len</parameter></methodparam>
     </methodsynopsis>
     <methodsynopsis language="python">
         <methodname><link linkend="method-gtkbuilder--connect-signals">connect_signals</link></methodname>
@@ -343,17 +342,12 @@
             <programlisting><methodsynopsis language="python">
                 <methodname>add_from_string</methodname>
                 <methodparam><parameter>buffer</parameter></methodparam>
-                <methodparam><parameter>len</parameter></methodparam>
             </methodsynopsis></programlisting>
             
             <variablelist>
                 <varlistentry>
                     <term><parameter role="keyword">buffer</parameter>&nbsp;:</term>
                         <listitem><simpara>The string to parse.</simpara></listitem>
-                </varlistentry>
-                <varlistentry>
-                    <term><parameter role="keyword">len</parameter>&nbsp;:</term>
-                        <listitem><simpara>The length of buffer (may be -1 if buffer is nul-terminated).</simpara></listitem>
                 </varlistentry>
                 <varlistentry>
                     <term><emphasis>Returns</emphasis>&nbsp;:</term>
