@@ -1,3 +1,9 @@
+2008-06-26  Paul Pogonyshev  <pogonyshev@gmx.net>
+
+	* pygtk-gtkbuilder.xml: Remove all mentions of 'length' parameter
+	to gtk.Builder.add_from_string.  See 'gtk/gtk-2.12.defs' for
+	explanation.
+
 2008-06-11  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* pygtk-gtkdialog.xml: Fix a typo.
