@@ -1,3 +1,8 @@
+2008-06-26  Paul Pogonyshev  <pogonyshev@gmx.net>
+
+	* gtk/gtk-2.12.defs (gtk.Builder.add_from_string): Explain why
+	'length' is preserved in definition, but not mentioned in docs.
+
 2008-06-24  Paul Pogonyshev  <pogonyshev@gmx.net>
 
 	* gtk/gtktreeview.override (_wrap_gtk_tree_model_tp_getitem): Fix
